<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundTint="#0E26C5"
        tools:context=".CgpaCalc">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="25dp"
            android:text="@string/cgpa_calculator1"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="125dp"
            android:text="@string/subject_1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="190dp"
            android:text="@string/subject_2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="255dp"
            android:text="@string/subject_3"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="320dp"
            android:text="@string/subject_4"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="385dp"
            android:text="@string/subject_5"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="450dp"
            android:text="@string/subject_6"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="515dp"
            android:text="@string/subject_7"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="580dp"
            android:text="@string/subject_8"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="683dp"
            android:onClick="f2"
            android:text="@string/calculate" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            android:layout_marginTop="90dp"
            android:text="@string/grade"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginTop="90dp"
            android:text="@string/credits"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_marginStart="175dp"
            android:layout_marginTop="125dp"
            android:ems="2"
            android:background="@color/x"
            android:textSize="20sp"
            android:inputType="number"
            android:textColor="@color/y" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_marginStart="175dp"
            android:layout_marginTop="190dp"
            android:background="@color/x"
            android:ems="2"
            android:textSize="20sp"
            android:textColor="@color/y"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_marginStart="175dp"
            android:layout_marginTop="255dp"
            android:ems="2"
            android:textSize="20sp"
            android:background="@color/x"
            android:textColor="@color/y"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_marginStart="175dp"
            android:layout_marginTop="320dp"
            android:ems="2"
            android:textSize="20sp"
            android:background="@color/x"
            android:textColor="@color/y"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_marginStart="175dp"
            android:layout_marginTop="385dp"
            android:ems="2"
            android:background="@color/x"
            android:textSize="20sp"
            android:textColor="@color/y"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_marginStart="175dp"
            android:layout_marginTop="450dp"
            android:ems="2"
            android:background="@color/x"
            android:textSize="20sp"
            android:textColor="@color/y"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_marginStart="175dp"
            android:layout_marginTop="515dp"
            android:ems="2"
            android:background="@color/x"
            android:textSize="20sp"
            android:textColor="@color/y"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText9"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_marginStart="175dp"
            android:layout_marginTop="580dp"
            android:ems="2"
            android:textSize="20sp"
            android:background="@color/x"
            android:textColor="@color/y"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText10"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="125dp"
            android:background="@color/x"
            android:ems="2"
            android:textSize="20sp"
            android:textColor="@color/y"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText11"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="190dp"
            android:ems="2"
            android:background="@color/x"
            android:textSize="20sp"
            android:textColor="@color/y"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText12"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="255dp"
            android:ems="2"
            android:background="@color/x"
            android:textSize="20sp"
            android:textColor="@color/y"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText13"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="320dp"
            android:ems="2"
            android:background="@color/x"
            android:textSize="20sp"
            android:textColor="@color/y"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText14"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="385dp"
            android:ems="2"
            android:background="@color/x"
            android:textSize="20sp"
            android:textColor="@color/y"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText15"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="450dp"
            android:ems="2"
            android:background="@color/x"
            android:textSize="20sp"
            android:textColor="@color/y"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText16"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="515dp"
            android:ems="2"
            android:background="@color/x"
            android:textSize="20sp"
            android:textColor="@color/y"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText17"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="580dp"
            android:ems="2"
            android:background="@color/x"
            android:textColor="@color/y"
            android:textSize="20sp"
            android:inputType="number" />
        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="640dp"
            android:text="@string/total_credits"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/editText18"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_marginStart="227dp"
            android:layout_marginTop="640dp"
            android:ems="2"
            android:background="@color/x"
            android:textSize="20sp"
            android:textColor="@color/y"
            android:inputType="number" />


    </RelativeLayout>

</ScrollView>